--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/default.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/default.css
@@ -1,50 +1,50 @@
-.ca_template_icon {color:#606E7F;width:370px;float:left;display:inline-block;background-color: #C7C5CB;margin:0px;height:150px;padding-top:10px;border-radius:20px 20px 0px 0px;}
-.ca_holder {display:inline-block;float:left;height:430px;width:370px;overflow:hidden;padding:0px;margin-bottom:1px;margin-right:3px;font-size:12px;}
-.ca_template {color:#606E7F;border-radius:0px 0px 20px 20px;display:inline-block;text-align:left;overflow:auto;height:270px;width:360px;padding-left:5px;padding-right:5px;	background-color:#DDDADF;}
-.ca_icon_wide {display:inline-block;float:left;width:95px;margin-left:25px;}
-.ca_wide_info {display: inline-block;float:left;text-align:left;margin-left:10px;margin-top:15px;width:200px;}
+.ca_template_icon {color:#606E7F;width:37rem;float:left;display:inline-block;background-color: #C7C5CB;margin:0px;height:15rem;padding-top:1rem;border-radius:2rem 20px 0px 0px;}
+.ca_holder {display:inline-block;float:left;height:43rem;width:37rem;overflow:hidden;padding:0px;margin-bottom:.1rem;margin-right:.3rem;font-size:1.2rem;}
+.ca_template {color:#606E7F;border-radius:0px 0px 2rem 2rem;display:inline-block;text-align:left;overflow:auto;height:27rem;width:36rem;padding-left:.5rem;padding-right:.5rem;	background-color:#DDDADF;}
+.ca_icon_wide {display:inline-block;float:left;width:9.5rem;margin-left:2.5rem;}
+.ca_wide_info {display: inline-block;float:left;text-align:left;margin-left:1rem;margin-top:1.5rem;width:20rem;}
 .ca_category {color:#486dba;font-weight:bold;}
 .ca_category::before {content:"Category: ";}
 .ca_categoryLink {color:#486dba;font-weight:normal;}
 .ca_author {color:#486dba;font-weight:bold;cursor:pointer;}
-.ca_applicationName {color:black;font-size:20px;}
+.ca_applicationName {color:black;font-size:2rem;}
 .ca_repository {color:black;}
 .ca_highlight {color:#0e5d08;font-weight:bold;}
 .ca_description {color:#505E6F;}
 input.appButtons {margin:0px;}
-input.viewButton {margin:1px;}
-input.sortButton {margin:1px;}
-input.dirButton {margin:1px;}
-input.allButtons {margin:0px;padding:10px;}
-input[type=checkbox] {width:20px;height:20px;}
-.enabledIcon {cursor:pointer;color:#005500;font-size:25px;}
-.disabledIcon {color:#040404;font-size:25px;}
-.pinned {cursor:pointer;font-size:15px;color:green;padding:3px;}
-.unpinned {cursor:pointer;font-size:15px;color:#820101;padding:3px;}
+input.viewButton {margin:.1rem;}
+input.sortButton {margin:.1rem;}
+input.dirButton {margin:.1rem;}
+input.allButtons {margin:0px;padding:1rem;}
+input[type=checkbox] {width:2rem;height:2rem;}
+.enabledIcon {cursor:pointer;color:#005500;font-size:2.5rem;}
+.disabledIcon {color:#040404;font-size:2.5rem;}
+.pinned {cursor:pointer;font-size:1.5rem;color:green;padding:.3rem;}
+.unpinned {cursor:pointer;font-size:1.5rem;color:#820101;padding:.3rem;}
 .pinned::after {content:"\f08d";font-family:fontAwesome;}
 .unpinned::after {content:"\f08d";font-family:fontAwesome;display:inline-block;-webkit-transform: rotate(20deg);-moz-transform: rotate(20deg);-ms-transform: rotate(20deg);	-o-transform: rotate(20deg);	transform: rotate(20deg);}
-.topRightLinks {padding-left:15px;font-weight:bold;}
-.appIcons {font-size:25px;color:#486dba;cursor:pointer;padding-left:5px;padding-right:5px;}
+.topRightLinks {padding-left:1.5rem;font-weight:bold;}
+.appIcons {font-size:2.5rem;color:#486dba;cursor:pointer;padding-left:.5rem;padding-right:.5rem;}
 .appIcons:hover {text-decoration:none;}
-.appIconsPopUp {font-size:25px;color:#FF8C2F;cursor:pointer;padding-left:5px;padding-right:5px;}
+.appIconsPopUp {font-size:2.5rem;color:#FF8C2F;cursor:pointer;padding-left:.5rem;padding-right:.5rem;}
 .appIconsPopUp:hover {text-decoration:none;}
 .myReadmore {text-align:center;}
 .myReadmoreButton {color:blue;}
-.displayIcon {height:96px;width:96px;}
-.supportLink {font-weight:bold;color:#486dba;padding-left:5px;padding-right:5px;}
+.displayIcon {height:9.6rem;width:9.6rem;}
+.supportLink {font-weight:bold;color:#486dba;padding-left:.5rem;padding-right:.5rem;}
 .supportLink::after {content:"Support Thread"}
-.projectLink {font-weight:bold;color:#486dba;padding-left:5px;padding-right:5px;}
+.projectLink {font-weight:bold;color:#486dba;padding-left:.5rem;padding-right:.5rem;}
 .projectLink::after {content:"Project Home Page"}
-.webLink {font-weight:bold;color:#486dba;padding-left:5px;padding-right:5px;}
+.webLink {font-weight:bold;color:#486dba;padding-left:.5rem;padding-right:.5rem;}
 .webLink::after {content:"Web Page"}
-.donateLink {font-size:12px;}
+.donateLink {font-size:1.2rem;}
 .donateLink::after {content:url('https://github.com/Squidly271/community.applications/raw/master/webImages/donate-button-small.png');}
-.dockerHubStar {color:#486dba;font-size:15px;}
+.dockerHubStar {color:#486dba;font-size:1.5rem;}
 .dockerDisabled {text-align:center;width:auto;color:purple;}
-.separateOfficial {text-align:center;width:auto;font-size:25px;}
+.separateOfficial {text-align:center;width:auto;font-size:2.5rem;}
 .displayBeta {cursor:pointer;}
-.newApp {color:red;font-size:15px;cursor:pointer;}
-.ca_fa-delete {color:#c70404;font-size:20px;position:relative;float:right;top:2px;cursor:pointer;}
+.newApp {color:red;font-size:1.5rem;cursor:pointer;}
+.ca_fa-delete {color:#c70404;font-size:2rem;position:relative;float:right;top:.2rem;cursor:pointer;}
 .ca_fa-delete::after {content:"\f2d3";font-family:fontAwesome;}
 .ca_fa-install::after {content:"\f019";font-family:fontAwesome;}
 .ca_fa-edit::after {content:"\f044";font-family:fontAwesome;}
@@ -55,9 +55,9 @@ input[type=checkbox] {width:20px;height:20px;}
 .ca_fa-start {color:green;}
 .ca_fa-start::after {content:"\f144";font-family:fontAwesome;}
 .ca_multiselect {cursor:pointer;}
-.pageNavigation {font-size:20px;}
-.specialCategory {font-size:15px;}
-.ca_table { padding:5px 0px 5px 0;font-weight:bold;}
+.pageNavigation {font-size:2rem;}
+.specialCategory {font-size:1.5rem;}
+.ca_table { padding:.5rem 0px .5rem 0;font-weight:bold;}
 .ca_dateUpdated {font-weight:bold;text-align:center;}
 .ca_dateUpdated {font-weight:bold;text-align:center;}
 .ca_dateUpdated::before {content:"Date Updated: ";}
