--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/azure.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/azure.css
@@ -1,2 +1,2 @@
-.searchSubmit{font-family:'FontAwesome';width:29px;height:29px;border:1px solid #dadada;border-radius:0px 4px 4px 0px;font-size:11px;position:relative; top:-7px;padding:0px 2px;background:#DADADA;border:none;cursor:pointer;}
-#searchBox{margin-left:10px;margin-right:0;position:relative;top:-6px;border:1px solid;border-radius:4px 0px 0px 4px;}
+.searchSubmit{font-family:'FontAwesome';width:2.9rem;height:2.9rem;border:.1rem solid #dadada;border-radius:0px .4rem .4rem 0px;font-size:1.1rem;position:relative; top:-.7rem;padding:0px .2rem;background:#DADADA;border:none;cursor:pointer;}
+#searchBox{margin-left:1rem;margin-right:0;position:relative;top:-.6rem;border:.1rem solid;border-radius:.4rem 0px 0px .4rem;}
